--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,7 +1,7 @@
 .dashboard {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh; /* Changed to min-height to ensure full height with scrolling */
     background-color: #f4f4f4;
 }
 
@@ -13,15 +13,22 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
 }
 
 .navbar-content {
     display: flex;
     align-items: center;
+    width: 100%;
+    max-width: 1200px; /* Adjust the max-width as needed */
+    margin: 0 auto; /* Center the content */
 }
 
 .welcome-message {
-    font-size: 18px;
+    font-size: 30px;
     font-weight: bold;
 }
 
@@ -34,7 +41,7 @@
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
-    margin-left: 20px;
+    margin-left: auto; /* Moves the button to the right within the flex container */
 }
 
 .logout-button:hover {
@@ -44,7 +51,7 @@
 
 h1 {
     text-align: center;
-    margin: 20px 0;
+    margin: 80px 0 20px; /* Adjust margin for space below navbar */
 }
 
 .pokemon-list {
@@ -52,13 +59,14 @@ h1 {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
-    padding: 0 20px;
+    padding: 20px; /* Padding for better spacing */
 }
 
 .pagination-buttons {
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    margin-bottom: 40px; /* Increased space between buttons and Pokémon list */
 }
 
 .pagination-button {
